--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,9 +6,10 @@
   <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <title>Chris I Powell</title>
-  <link rel="stylesheet" href="/chrisipowell.css" media="screen" title="no title" charset="utf-8">
-  <script src="/vendor.js"></script>
-  <script src="/app.js"></script>
+  <link rel="stylesheet" href="/style/chrisipowell.css" media="screen" title="no title" charset="utf-8">
+  <script src="/js/vendor.js"></script>
+  <script src="/js/app.js"></script>
+  <script>require('script/app').init()</script>
 </head>
 <body>
     <h1>Chris I Powell</h1>
