--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-  <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-  <title>Chris I Powell</title>
-  <link rel="stylesheet" href="/style/chrisipowell.css" media="screen" title="no title" charset="utf-8">
-  <script src="/js/vendor.js"></script>
-  <script src="/js/app.js"></script>
-  <script>require('script/app').init()</script>
-</head>
-<body>
-    <h1>Chris I Powell</h1>
-    <p>An intro</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+    <title>Chris I Powell</title>
+    <link rel="stylesheet" href="/style/chrisipowell.css" media="screen" title="no title" charset="utf-8">
+    <script src="/js/vendor.js"></script>
+    <script src="/js/app.js"></script>
+    <script>require('script/app').init()</script>
+  </head>
+  <body>
+      <header>
+        <h1>Chris I Powell</h1>
+        <p>An intro</p>
+      </header>
+      <nav>
+        <ul class="horizontal">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Projects</a></li>
+        </ul>
+
+      </nav>
+      <section>
+
+      </section>
+  </body>
 </html>
