--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -14,11 +14,11 @@
         <p>Father, Lead Developer, Chaser of leather, Drinker of coffee, beer and whisky</p>
       </header>
       <nav class="main">
-        <ul>
+        <!-- <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Projects</a></li>
-        </ul>
+        </ul> -->
 
         <ul class="right">
             <li><a href="https://www.linkedin.com/in/chris-i-powell"><i class="linkedin"></i></a></li>
@@ -30,9 +30,7 @@
          I am a passionate technologist and developer with over 10 years experience developing systems
          across sectors including Finance, Travel, Education, Research, Epidemilogy and Local Goverment.
          I believe that it is the job of an Engineer to do difficult things, to push boundaries and deliver
-         solutions that enable people to do more, better and faster then they did before. Sport is a big
-         part of my life, and I like a quote, and the team GB motto from London 2012 <q>better never stops</q>
-         sums up my approach to both my work and my skillset.
+         solutions that enable people to do more, better and faster.
         </p>
         <aside class="sidebar">
           <h2>Tech Stack</h2>
@@ -42,7 +40,7 @@
           </ul>
         </aside>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
         </p>
 
 
