Optimised page load

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,7 +6,9 @@
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <title>Chris I Powell</title>
+    <!--build:css style/chrisipowell.min.css -->
     <link rel="stylesheet" href="/style/chrisipowell.css" charset="utf-8">
+    <!-- /build -->
   </head>
   <body>
       <header>
