Add Wakatime graph

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -36,10 +36,7 @@
         </p>
         <aside class="sidebar">
           <h2>Tech Stack</h2>
-          <ul>
-            <li>Node</li>
-            <li>Elixir</li>
-          </ul>
+          <figure><embed src="https://wakatime.com/share/@chrisipowell/e7c845f1-8f37-4a64-9d94-c716871a6380.svg"></embed></figure>
         </aside>
         <p>
 
