--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -13,7 +13,7 @@
   <body>
       <header>
         <h1>Chris I Powell</h1>
-        <p>Father, Lead Developer, Chaser of leather, Drinker of coffee, beer and whisky</p>
+        <p>Code, Sport, Coffee, Kids</p>
       </header>
       <nav class="main">
         <!-- <ul>
@@ -29,19 +29,13 @@
       </nav>
       <section class="main">
         <p class="lead">
-         I am a passionate technologist and developer with over 10 years experience developing systems
-         across sectors including Finance, Travel, Education, Research, Epidemilogy and Local Goverment.
-         I believe that it is the job of an Engineer to do difficult things, to push boundaries and deliver
-         solutions that enable people to do more, better and faster.
+         Currently the Lead Software Engineer at <a href="https://www.weswap.com/en">WeSwap.com</a>.
+         I'm a great believer that being a developer isn't just about building against requirements.
+         Software Engineers need to add value, to anticipate the need to expand code. I also believe
+         that no Engineer should have one langage to work from. I've used PHP, C#, Node.js, Go, Elixir
+         professionally on the backend, as well and Angular, LESS and SCSS on the front end.
         </p>
-        <aside class="sidebar">
-          <h2>Tech Stack</h2>
-          <figure><embed src="https://wakatime.com/share/@chrisipowell/e7c845f1-8f37-4a64-9d94-c716871a6380.svg"></embed></figure>
-        </aside>
-        <p>
-
-        </p>
-
+      
 
       </section>
 
