fix eslint rule for codeclimate test

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="cip">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
@@ -9,6 +9,10 @@
     <!--build:css inline style/chrisipowell.min.css -->
     <link rel="stylesheet" href="/style/chrisipowell.css" charset="utf-8">
     <!-- /build -->
+
+    <script type="text/javascript" src="/scripts/angular.js" ></script>
+    <script type="text/javascript" src="/scripts/app.js"></script>
+
   </head>
   <body>
       <header>
@@ -35,9 +39,7 @@
          that no Engineer should have one langage to work from. I've used PHP, C#, Node.js, Go, Elixir
          professionally on the backend, as well and Angular, LESS and SCSS on the front end.
         </p>
-      
-
       </section>
-
+      <blog></blog> 
   </body>
 </html>
